# py-starter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  python-app.yml
src/: main.py
src/demo/: __init__.py  main.py
tests/: test_main.py  test_tensorflow.py
