[project]
name = "py-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.6.1",
]

[project.scripts]
start = "src.main:main"

[tool.setuptools]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.8",
]
