[project]
name = "py-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.6.1",
]

[project.scripts]
start = "src.main:main"

[tool.setuptools]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=3.7.1",
    "ruff>=0.1.2",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
