[project]
name = "py-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.6.1",
]

[project.scripts]
start = "src.main:main"

[tool.setuptools]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
